<resources>
    <string name="app_name">prueba_map</string>
    <string name="email_login">Email</string>
    <string name="email_password">Password</string>
    <string name="Nombre">Name</string>
    <string name="Correo">Email</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Contraseña">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="title_activity_home_cliente">home_cliente</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tap 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cliente_home">cliente_home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>